--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -2,7 +2,7 @@
 <footer class="page-footer bottom">
 
     <!-- Copyright -->
-    <div class="footer-copyright text-center py-3 "id="rodape" >© 2019 Copyright:
+    <div class="footer-copyright text-center py-3" >© 2019 Copyright:
       <a href="https://mdbootstrap.com/education/bootstrap/"> generation.com</a>
     </div>
     <!-- Copyright -->
