--- a/src/app/sobre/sobre.component.html
+++ b/src/app/sobre/sobre.component.html
@@ -1,4 +1,4 @@
-
+<div class="bg">
     
     <div class="container pt-5 pl-5 pr-5 mt-5 mb-5" id="pt1">
         <div class="row">
@@ -136,4 +136,5 @@
     </div>
 
     </div>
+</div>
 
