--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -1,10 +1,13 @@
+<div class="bg">
+
+<div class="row">
 <div class="container pt-br mt-5 mb-5" id="pt1">
     <div class="row" id="form">
         <div class="col-md-1"></div>
         <div class="col-md-5">
 
 
-            <form class="mt-3 pb-3">
+            <div class="mt-3 pb-3">
                 <div class="form-group">
                     <label for="nome">Nome</label>
                     <input type="text" class="form-control" id="nome" [(ngModel)]="nome"
@@ -38,7 +41,7 @@
 
                 </div>
 
-            </form>
+            </div>
         </div>
         <div class="col-md-5">
             <div class="col-md-12">
@@ -53,4 +56,7 @@
         </div>
         <div class="col-md-1"></div>
     </div>
+</div>
+</div>
+
 </div>
