--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,22 +1,26 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Home </a>
-        </li>
-        <li class="nav-item">
-          <a  class="nav-link" [routerLink]="'/sobre'">Sobre Nós</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="'/contato'">Contato</a>
-        </li>
-        <li class="nav-item">
-        
-        </li>
-      </ul>
-    </div>
-  </nav>
+<nav class="navbar navbar-expand-lg" style="background-color: #7a297a;" id="navtitile">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+    aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" style="color:white" [routerLink]="'/feed'">Feed </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" style="color:white" [routerLink]="'/sobre'">Sobre Nós</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" style="color:white" [routerLink]="'/contato'">Contato</a>
+      </li>
+      <li class="nav-item">
+      </li>
+    </ul>
+    <div class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </div>
+  </div>
+</nav>
