--- a/src/app/sobre/sobre.component.css
+++ b/src/app/sobre/sobre.component.css
@@ -47,3 +47,7 @@ height: 300px;
 -webkit-transform: rotate(360deg); /* Safari */
 transform: rotate(360deg);
 }
+
+.bg{
+    background-image: url(../../assets/image/fteste.jpg);
+}
