--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,6 @@
+/*background-image: url("./assets/image/fundo.jpeg");*/ /*Primeiro background utilizado*/
+
+
 body{
-    background-image: url("./assets/image/fundo.jpeg");
+    
 }
