consumo de api ok (buscar todos e por ID)

--- a/src/app/feed-list/feed-list.component.html
+++ b/src/app/feed-list/feed-list.component.html
@@ -1,77 +1,117 @@
-
 <div class="row" id="bg">
-      <div class="col-md-2">            
-          <div class="card border-secondary mb-3 perfil" style="width: 18rem;">
-              <img class="profile-card" src="../../assets/image/perfil.jpg" alt="Card image cap" height="150" width="150" >
-              <div class="card-header border-secondary mb-3 bg-secondary card-name">
-                  <strong>Milles Morales</strong>
-              </div>
-              <div class="card-body">
-                  <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the
-                      card's content. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos facere at
-                      accusantium? Eius voluptatibus molestiae, porro voluptatem magnam eos, tenetur officiis adipisci
-                      sunt repellat iusto, consequatur odit asperiores totam minus?Lorem ipsum dolor sit amet
-                      consectetur adipisicing elit. Libero enim ut autem officia? Earum fugit nulla asperiores rem
-                      similique hic sed. Laborum nam architecto necessitatibus quibusdam quis saepe impedit sint.</p>
-              </div>
+    <div class="col-md-1"></div>
+        <div class="col-md-2">
+            <div class="card border-secondary mb-3 perfil" style="width: 18rem;">
+                <img class="profile-card" src="../../assets/image/perfil.jpg" alt="Card image cap" height="150"
+                    width="150">
+                <div class="card-header border-secondary mb-3 bg-secondary card-name">
+                    <strong>Milles Morales</strong>
+                </div>
+                <div class="card-body">
+                    <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the
+                        card's content. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos facere at
+                        accusantium? Eius voluptatibus molestiae, porro voluptatem magnam eos, tenetur officiis adipisci
+                        sunt repellat iusto, consequatur odit asperiores totam minus?Lorem ipsum dolor sit amet
+                        consectetur adipisicing elit. Libero enim ut autem officia? Earum fugit nulla asperiores rem
+                        similique hic sed. Laborum nam architecto necessitatibus quibusdam quis saepe impedit sint.</p>
+                </div>
 
-          </div>
-      </div>
+            </div>
+        </div>
 
-      <div class="col-md-1">
+        <div class="col-md-1">
 
-      </div>
+        </div>
 
-      <div class="col-md-4 ">
-          <div class="post">
-              <input class="text-area post border-secondary mb-1" type="text" id="post" placeholder="o que você esta pensando?"><br>
-              <button type="button " class="btn btn-primary">Postar</button>
-          </div>
-
-          <div class="card post-1  border-secondary mb-3" *ngFor = "let item of feed">
-              <div class="card-header">
-                  <img src="{{item.linkimg}}" class="profile-post" alt="" width="50" height="50" > <strong> {{item.titulo}}</strong>
-              </div>
-              <div class="card-body">
-                  <blockquote class="blockquote mb-0">
-                      <p>{{item.texto}}</p> 
-                  </blockquote>
-
-                  <div class="divIcones">
-                  <button class="icones">
-                      <img src="../../assets/image/lampada.jfif"  alt="" width="30" height="30">
-                  </button>
-  
-                  <button class="icones">
-                      <img src="../../assets/image/like.jfif" alt="" width="30" height="30" >
-                  </button>
-              </div>
-              </div>
-                  
-          </div>
-
-             
-          
-      </div>
-      <div class="col-md-1">
-          
-      </div>
-
-      <div class="col-md-4">
-
-              <div class="card events">
-                      <div class="card-header">
-                        Eventos Que Participou <img src="../../assets/image/trofeu.png" alt="" height="30" width="30">
-                      </div>
-                      <div class="card-body">
-                        <img src="../../assets/image/voluntario.jpg" alt="" height="30" width="30"> <img src="../../assets/image/chepeu.png" alt="" width="30" height="30"> <img src="../../assets/image/intercambiocheck.png" alt="" width="30" height="30">
-                        <img src="../../assets/image/music.png" alt="" height="30" width="30" >
-                        <img src="../../assets/image/museu.png" alt="" height="30" width="30">
-                        <img src="../../assets/image/teatro..jpg" alt="" width="30" height="30">
-                        <p class="card-text">Voce Ja visitou esses eventos Parabens, Click em "Ver mais" para almentar sua taxa de "cultura"</p>
-                        <a href="#" class="btn btn-primary">Ver Mais</a>
-                      </div>
+        <div class="col-md-4 ">
+            <div class="post">
+                <input class="text-area post border-secondary mb-1" type="text" id="post"
+                    placeholder="o que você esta pensando?"><br>
+                <button type="button " class="btn btn-primary">Postar</button>
+            </div>
+            <!--if para saber se o buscador está vazio ou não-->
+            <div class="card post-1  border-secondary mb-3"  *ngIf="_feed != null">
+                    <div class="card-header">
+                        <img src="{{_feed.linkimg}}" class="profile-post" alt="" width="50" height="50"> <strong>
+                            {{_feed.titulo}}</strong>
                     </div>
-      </div>
+                    <div class="card-body">
+                        <blockquote class="blockquote mb-0">
+                            <p>{{_feed.texto}}</p>
+                        </blockquote>
+    
+                        <div class="divIcones">
+                            <button class="icones">
+                                <img src="../../assets/image/lampada.jfif" alt="" width="30" height="30">
+                            </button>
+    
+                            <button class="icones">
+                                <img src="../../assets/image/like.jfif" alt="" width="30" height="30">
+                            </button>
+                        </div>
+                    </div>
+    
+                </div>
+                <!--e o buscador estiver com o seu campo vazio, então mostrar todos-->
+                <div *ngIf="_feed == null">
+                    <div class="card post-1  border-secondary mb-3" *ngFor="let item of feed">
+                            <div class="card-header">
+                                <img src="{{item.linkimg}}" class="profile-post" alt="" width="50" height="50"> <strong>
+                                    {{item.titulo}}</strong>
+                            </div>
+                            <div class="card-body">
+                                <blockquote class="blockquote mb-0">
+                                    <p>{{item.texto}}</p>
+                                </blockquote>
+            
+                                <div class="divIcones">
+                                    <button class="icones">
+                                        <img src="../../assets/image/lampada.jfif" alt="" width="30" height="30">
+                                    </button>
+            
+                                    <button class="icones">
+                                        <img src="../../assets/image/like.jfif" alt="" width="30" height="30">
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                </div>
+         
 
-  </div>
+
+
+        </div>
+        <div class="col-md-1">
+
+            </div>
+
+        <div class="col-md-2">
+
+            <div class="card events">
+                <div class="card-header">
+                    Eventos Que Participou <img src="../../assets/image/trofeu.png" alt="" height="20" width="20">
+                </div>
+                <div class="card-body">
+                    <img src="../../assets/image/voluntario.jpg" alt="" height="30" width="30"> <img
+                        src="../../assets/image/chepeu.png" alt="" width="30" height="30"> <img
+                        src="../../assets/image/intercambiocheck.png" alt="" width="30" height="30">
+                    <img src="../../assets/image/music.png" alt="" height="30" width="30">
+                    <img src="../../assets/image/museu.png" alt="" height="30" width="30">
+                    <img src="../../assets/image/teatro..jpg" alt="" width="30" height="30">
+                    <p class="card-text">Voce Ja visitou esses eventos Parabens, Click em "Ver mais" para aumentar sua
+                        taxa de "cultura"</p>
+                    <a href="#" class="btn btn-primary">Ver Mais</a>
+                </div>
+            </div>
+
+            <div class="form-inline my-2  mt-3">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" [(ngModel)]="buscar"
+                    aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit" (click)="findId()">Search</button>
+            </div>
+
+        </div>
+        <div class="col-md-1"></div>
+
+
+</div>
