--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -18,9 +18,9 @@
       <li class="nav-item">
       </li>
     </ul>
-    <div class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </div>
+    <!--<div class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"[(ngModel)]="buscar">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit" (click)="getOne()">Search</button>
+      </div>-->
   </div>
 </nav>
