Foi realizada a formatação da página Feed. Substituição dos botões de liks por links. Alteração do background para cinza com detalhes cinza. Acrescentado 3 backgound em imagens para teste. Alinhamento dos texto em 'Feed' e 'Sobre nós'. Home não aparece mais como página vázia, o Feed aparece quando a página é carregada. Bugs da API consertados, o card não fica mais vázio ao deixar o campo de busca vázio ou com Id inválido, agora, caso aconteça, a API é apresentada com todos os dados. Substituição das animações da fotos, usado 'Collapse' para mostrar a minibiografia caso click na foto, apenas uma por vez.

--- a/src/app/feed-list/feed-list.component.css
+++ b/src/app/feed-list/feed-list.component.css
@@ -1,4 +1,4 @@
-#bg{
+/*#bg{
     background-color: rgb(240, 240, 240);
 }
 
@@ -101,4 +101,35 @@ blockquote {
 
 #botoes{
     margin: 10px;
+}*/
+
+.profile-post{
+    border-radius: 50%;
+    margin: 10px;
+    border: 1px solid black;
+    width:50px; 
+    height:50px;
 }
+
+.profile-card{
+    border-radius: 50%; 
+    border: 1px black solid;   
+}
+
+.card-esquerdo{
+    text-align: center;
+}
+
+p{
+    text-align: justify;
+}
+
+.bg{
+    background: url(../../assets/image/fundo-cinza.png) no-repeat center top fixed;
+    -webkit-background-size: cover;
+    -moz-background-siz: cover;
+    -o-bakground-size: cover;
+    background-size: cover;
+}
+
+
