--- a/src/app/sobre/sobre.component.css
+++ b/src/app/sobre/sobre.component.css
@@ -7,25 +7,6 @@ font-family: 'Indie Flower', cursive;
 font-size: 70px;
 }
 
-.fotos
-{
-    border-radius: 50%;
-    height: 200px;
-    width: 200px;
-    padding-bottom: 3%;
-}
-
-.card-body
-{
-    padding-bottom: 20px;
-}
-
-img#italo
-{
-    margin-left: 20px;
-}
-
-
 #pt1
 {
     background-color: rgba(0,0,0,.9); 
@@ -36,18 +17,45 @@ img#italo
 {
     color: black;
 }
-.fotos{
+/*.fotos{
 webkit-transition: width 2s, height 2s, -webkit-transform 2s; /* Safari */
-transition: width 2s, height 2s, transform 2s;
+/*transition: width 2s, height 2s, transform 2s;
 }
 
 .fotos:hover {
 width: 300px;
 height: 300px;
 -webkit-transform: rotate(360deg); /* Safari */
-transform: rotate(360deg);
+/*transform: rotate(360deg);
+}*/
+
+/*.bg{
+    background-image: url(../../assets/image/fteste.jpg);
 }
 
+/*.fotos{
+    width: 280px;
+    height: 250px;
+}*/
+
 .bg{
-    background-image: url(../../assets/image/fteste.jpg);
+    background: url(../../assets/image/fteste.jpg);
+}
+
+.collapse-text{
+    width: 280px;
+    text-align: justify;
+    padding:30px;
+    border: 1px solid #e9e0e0;
+    background: white;
+    transition-duration: 2s;
+}
+
+.collapse-text h5{
+    text-align: center;
+    padding-bottom: 20px;
+}
+.fotos{
+    width:280px;
+    height: 250px;
 }
