--- a/src/app/feed-list/feed-list.component.html
+++ b/src/app/feed-list/feed-list.component.html
@@ -1,100 +1,90 @@
-<div class="flex-box">
-    <div class="row" id="bg">
+<div class="bg">
+<div class="row pb-5">
+     <!--Card lado esquerdo-->
+    <div class="col-md-3">
+        <div class="card mt-5 ml-4">
+            <!--Cabeçalho do card esquerdo com a foto de perfil-->
+            <div class="card-header card-esquerdo"><img class="profile-card" src="../../assets/image/perfil.jpg" alt="Card image cap" height="150"
+                width="150"></div>
+            <div class="card-body">
+                <!--Nome do usuário-->
+                <h5 class="card-title"><strong>Milles Morales</strong></h5>
+                <!--Parte da descrição do perfil-->
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos facere at accusantium? Eius voluptatibus molestiae, porro voluptatem magnam eos, tenetur officiis adipisci sunt repellat iusto, consequatur odit asperiores totam minus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero enim ut autem officia? Earum fugit ulla asperiores rem similique hic sed. Laborum nam architecto necessitatibus quibusdam quis aepe impedit sint.
+                </p>
+            </div>
+        </div>
+    </div>
 
-        <div class="col-md-3">
-            <div class="card border-secondary mb-3 perfil" style="width: 18rem;">
-                <img class="profile-card" src="../../assets/image/perfil.jpg" alt="Card image cap" height="150"
-                    width="150">
-                <div class="card-header border-secondary mb-3 bg-secondary card-name">
-                    <strong>Milles Morales</strong>
+     <!--Campo de postagem e carregamento de noticias-->
+    <div class="col-md-6">
+        <!--Campo de postagem-->
+        <div class="card-body mt-4">
+            <div class="tab-content" id="myTabContent">
+                <div class="tab-pane fade show active" id="posts" role="tabpanel" aria-labelledby="posts-tab">
+                    <div class="form-group">
+                        <textarea class="form-control" id="message" rows="4"  placeholder="No que voçê está pensando?"></textarea>
+                    </div>
                 </div>
-                <div class="card-body">
-                    <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the
-                        card's content. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos facere at
-                        accusantium? Eius voluptatibus molestiae, porro voluptatem magnam eos, tenetur officiis adipisci
-                        sunt repellat iusto, consequatur odit asperiores totam minus?Lorem ipsum dolor sit amet
-                        consectetur adipisicing elit. Libero enim ut autem officia? Earum fugit nulla asperiores rem
-                        similique hic sed. Laborum nam architecto necessitatibus quibusdam quis saepe impedit sint.</p>
+            </div>
+            <div class="btn-toolbar justify-content-end mb-5">
+                <div class="btn-group">
+                    <button type="submit" class="btn btn-primary">Publicar</button>
                 </div>
-
+            </div>
+        </div>
+    
+            <!--Feed de noticias e alimentação com API-->
+            
+        <div class="card post-1 mb-3 ml-3 mr-3" *ngIf="_feed != null">
+            <!--Cabeçalho do Fedd de noticias-->
+            <div class="card-header"><img src="{{_feed.linkimg}}" class="profile-post" alt=""> 
+                <strong>{{_feed.titulo}}</strong>
+            </div>
+            <!--Noticias recuperadas da API-->
+            <div class="card-body">
+                <!--Vai ser usado quando tiver banco de dados para computar hora
+                <div class="text-muted h7 mb-2"> <i class="fa fa-clock-o"></i>10 min ago</div>-->
+                <!--<blockquote class="blockquote mb-0">-->
+                    <p>{{_feed.texto}}</p>
+                <!--</blockquote>-->
+            </div>
+            <div class="card-footer">
+                <a href="#" class="card-link"><i class="fa fa-gittip"></i> Gostei</a>
+                <a href="#" class="card-link"><i class="fa fa-comment"></i> Comentário</a>
+                <a href="#" class="card-link"><i class="fa fa-mail-forward"></i> Compartilhar</a>
             </div>
         </div>
 
-
-        <div class="col-md-6 ">
-            <div class="post">
-                <input class="text-area post border-secondary mb-1" type="text" id="post"
-                    placeholder="o que você esta pensando?"><br>
-                <button type="button " class="btn btn-primary">Postar</button>
-            </div>
-            <!--if para saber se o buscador está vazio ou não-->
-            <div class="card post-1 border-secondary mb-3" *ngIf="_feed != null">
-                <div class="card-header">
-                    <img src="{{_feed.linkimg}}" class="profile-post" alt="" > <strong>
-                        {{_feed.titulo}}</strong>
+        <!--e o buscador estiver com o seu campo vazio, então mostrar todos-->
+        <div bg-light *ngIf="_feed == null">
+            <div class="card post-1  mb-3 ml-3 mr-3" *ngFor="let item of feed">
+                <!--Cabeçalho do Fedd de noticias-->
+                <div class="card-header"><img src="{{item.linkimg}}" class="profile-post" alt=""> 
+                    <strong>{{item.titulo}}</strong>
                 </div>
+                <!--Noticias recuperadas da API-->
                 <div class="card-body">
-                    <blockquote class="blockquote mb-0">
-                        <p>{{_feed.texto}}</p>
-                    </blockquote>
+                    <!--Vai ser usado quando tiver banco de dados para computar hora
+                    <div class="text-muted h7 mb-2"> <i class="fa fa-clock-o"></i>10 min ago</div>-->
+                    <!--<blockquote class="blockquote mb-0">-->
+                        <p>{{item.texto}}</p>
+                    <!--</blockquote>-->
                 </div>
                 <div class="card-footer">
-                    <button class="icones">
-                        <img src="../../assets/image/lampada.jfif" alt="" width="30" height="30">
-                    </button>
-
-                    <button class="icones">
-                        <img src="../../assets/image/like.jfif" alt="" width="30" height="30">
-                    </button>
+                    <a href="#" class="card-link"><i class="fa fa-gittip"></i> Gostei</a>
+                    <a href="#" class="card-link"><i class="fa fa-comment"></i> Comentário</a>
+                    <a href="#" class="card-link"><i class="fa fa-mail-forward"></i> Compartilhar</a>
                 </div>
-                <!--<div class="divIcones">
-                        <button class="icones">
-                            <img src="../../assets/image/lampada.jfif" alt="" width="30" height="30">
-                        </button>
-
-                        <button class="icones">
-                            <img src="../../assets/image/like.jfif" alt="" width="30" height="30">
-                        </button>
-                </div>-->
-                
-
             </div>
-            <!--e o buscador estiver com o seu campo vazio, então mostrar todos-->
-            <div *ngIf="_feed == null">
-                <div class="card post-1 border-secondary mb-3" *ngFor="let item of feed">
-                    <div class="card-header">
-                        <img src="{{item.linkimg}}" class="profile-post" alt=""> <strong>
-                            {{item.titulo}}</strong>
-                    </div>
-                    <div class="card-body">
-                        <blockquote class="blockquote mb-0">
-                            <p>{{item.texto}}</p>
-                        </blockquote>
-                    </div>
-                    <div class="card-footer" id="botoes">
-                            <button class="icones pull-right">
-                                <img src="../../assets/image/lampada.jfif"  alt="" width="30" height="30">
-                            </button>
-        
-                            <button class="icones pull-right">
-                                <img src="../../assets/image/like.jfif"  alt="" width="30" height="30">
-                            </button>
-                    </div>
-                </div>
-                
-            </div>
-
-
-
-
-        </div>
-        
-
-        <div class="col-md-3">
-
-            <div class="card events">
+        </div>            
+     </div>
+     
+     <!--Card do lado direito-->
+     <div class="col-md-3">
+        <div class="card events mt-5 mr-4">
                 <div class="card-header">
-                     <img class="trofeu" src="../../assets/image/trofeu.png" alt="" height="50" width="50">Eventos Que Participou
+                        <img class="trofeu" src="../../assets/image/trofeu.png" alt="" height="50" width="50">Eventos Que Participou
                 </div>
                 <div class="card-body" id="cardEventos">
                     <img src="../../assets/image/voluntario.jpg" alt="" height="30" width="30"> <img
@@ -104,18 +94,47 @@
                     <img src="../../assets/image/museu.png" alt="" height="30" width="30">
                     <img src="../../assets/image/teatro..jpg" alt="" width="30" height="30">
                     <p class="card-text">Voce Ja visitou esses eventos Parabens, Click em "Ver mais" para aumentar sua taxa de "cultura".</p>
-                    <a href="#" class="btn btn-primary pull-right" id="btnVMais">Ver Mais</a>
+                    <div class="btn-toolbar justify-content-end">
+                        <div class="btn-group">
+                    <button href="#" class="btn btn-primary" id="btnVMais">Ver Mais</button>
+                    </div>
+                    </div>
                 </div>
             </div>
-
-            <div class="form-inline my-2 justify-content-center">
+    
+            <div class="form-inline my-3">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" [(ngModel)]="buscar"
                     aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit" (click)="findId()">Search</button>
+                <button class="btn btn-primary my-2 my-sm-0" type="submit" (click)="findId()">Search</button>
             </div>
-
         </div>
+    </div> 
+</div>      
+        
+        
+        
+        
+        
+        
+        
 
 
-    </div>
-</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
