--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,7 +7,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" style="color:white" [routerLink]="'/feed'">Feed </a>
+        <a class="nav-link" style="color:white" [routerLink]="''">Feed </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" style="color:white" [routerLink]="'/sobre'">Sobre Nós</a>
