--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="page-footer bottom">
+<footer class="page-footer bottom" id="rodape">
 
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3" >© 2019 Copyright:
