--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,9 +15,66 @@
       <li class="nav-item">
         <a class="nav-link" style="color:white" [routerLink]="'/contato'">Contato</a>
       </li>
-      <li class="nav-item">
-      </li>
+      <!--<li class="nav-item">
+        <a class="nav-link" style="color:white" [routerLink]="'/cadastro'">Cadastre-se</a>
+      </li>-->
     </ul>
+    <!-- Botão para acionar modal -->
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ExemploModalCentralizado">
+      Cadastre-se
+    </button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="ExemploModalCentralizado" tabindex="-1" role="dialog"
+      aria-labelledby="TituloModalCentralizado" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="TituloModalCentralizado">Cadastro</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="mt-3 pb-3">
+              <div class="form-group">
+                <label for="nome">Nome Completo</label>
+                <input type="text" class="form-control" id="nome" [(ngModel)]="nome"
+                  [ngModelOptions]="{standalone: true}" aria-describedby="nome" placeholder="Digite seu nome..." 
+                  autofocus required>
+                <span *ngIf='erroNome'>{{erroNome}}<br></span>
+
+                <label for="telefone">Telefone</label>
+                <input type="number" class="form-control" id="telefone" [(ngModel)]="telefone"
+                  [ngModelOptions]="{standalone: true}" aria-describedby="telefone" placeholder="Digite seu telefone..."
+                  required>
+                <span *ngIf='erroTelefone'>{{erroTelefone}}<br></span>
+
+                <label for="email">E-mail</label>
+                <input type="email" class="form-control" id="email" [(ngModel)]="email"
+                  [ngModelOptions]="{standalone: true}" aria-describedby="emailHelp" placeholder="Digite seu e-mail..."
+                  required>
+                <span *ngIf='erroEmail'>{{erroEmail}}<br></span>
+
+                <label for="senha">Senha</label>
+                <input type="password" class="form-control" id="senha" [(ngModel)]="senha"
+                [ngModelOptions]="{standalone: true}" placeholder="Digite sua Senha..." required>
+                
+                <label for="senha2">Confirme a Senha</label>
+                <input type="password" class="form-control" id="senha2" [(ngModel)]="senha2" [ngModelOptions]="{standalone: true}" placeholder="Confirme sua Senha" required>
+                <span *ngIf='erroSenha'>{{erroSenha}}<br></span>
+                
+              </div>
+
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+            <button type="button" class="btn btn-primary" (click)="validar()">Cadastrar</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <!--<div class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"[(ngModel)]="buscar">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit" (click)="getOne()">Search</button>
