--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,9 +15,9 @@
       <li class="nav-item">
         <a class="nav-link" style="color:white" [routerLink]="'/contato'">Contato</a>
       </li>
-      <!--<li class="nav-item">
-        <a class="nav-link" style="color:white" [routerLink]="'/cadastro'">Cadastre-se</a>
-      </li>-->
+      <li class="nav-item">
+        <a class="nav-link" style="color:white" [routerLink]="'/administrador'">Administrador</a>
+      </li>
     </ul>
     <!-- Botão para acionar modal -->
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ExemploModalCentralizado">
@@ -39,26 +39,26 @@
             <div class="mt-3 pb-3">
               <div class="form-group">
                 <label for="nome">Nome Completo</label>
-                <input type="text" class="form-control" id="nome" [(ngModel)]="nome"
+                <input type="text" class="form-control" id="nome" [(ngModel)]="usuario.nome"
                   [ngModelOptions]="{standalone: true}" aria-describedby="nome" placeholder="Digite seu nome..." 
                   autofocus required>
                 <span *ngIf='erroNome'>{{erroNome}}<br></span>
 
                 <label for="telefone">Telefone</label>
-                <input type="number" class="form-control" id="telefone" [(ngModel)]="telefone"
+                <input type="number" class="form-control" id="telefone" [(ngModel)]="usuario.telefone"
                   [ngModelOptions]="{standalone: true}" aria-describedby="telefone" placeholder="Digite seu telefone..."
                   required>
                 <span *ngIf='erroTelefone'>{{erroTelefone}}<br></span>
 
                 <label for="email">E-mail</label>
-                <input type="email" class="form-control" id="email" [(ngModel)]="email"
+                <input type="email" class="form-control" id="email" [(ngModel)]="usuario.email"
                   [ngModelOptions]="{standalone: true}" aria-describedby="emailHelp" placeholder="Digite seu e-mail..."
                   required>
                 <span *ngIf='erroEmail'>{{erroEmail}}<br></span>
 
                 <label for="senha">Senha</label>
-                <input type="password" class="form-control" id="senha" [(ngModel)]="senha"
-                [ngModelOptions]="{standalone: true}" placeholder="Digite sua Senha..." (keydown)="mostarStatus()"  required>
+                <input type="password" class="form-control" id="senha" [(ngModel)]="usuario.senha"
+                [ngModelOptions]="{standalone: true}" placeholder="Digite sua Senha..." required>
                 <span *ngIf = 'erroStatus'>{{erroStatus}}<br></span>
                 <span *ngIf='erroSenha'>{{erroSenha}}<br></span>
                 
@@ -77,9 +77,5 @@
         </div>
       </div>
     </div>
-    <!--<div class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"[(ngModel)]="buscar">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit" (click)="getOne()">Search</button>
-      </div>-->
   </div>
 </nav>
