Botão de inscreva comentado, será usado para migrar o formulario

--- a/src/app/rodape/rodape.component.css
+++ b/src/app/rodape/rodape.component.css
@@ -3,3 +3,10 @@
   color: white;
   background-color: rgb(41, 41, 41);
 }
+
+#teste{
+    bottom: 0;
+    position: fixed;
+    width: 100%;
+    text-align: center;
+}
