--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -1,11 +1,13 @@
 <!-- Footer -->
-<footer class="page-footer bottom" id="rodape">
-
-    <!-- Copyright -->
-    <div class="footer-copyright text-center py-3" >© 2019 Copyright:
-      <a href="https://mdbootstrap.com/education/bootstrap/"> generation.com</a>
-    </div>
-    <!-- Copyright -->
+<div class="container.fluid" id="teste">
+  <footer class="page-footer bottom" id="rodape" style="background-color: #7a297a;">
   
-  </footer>
-  <!-- Footer -->
+      <!-- Copyright -->
+      <div class="footer-copyright text-center py-3" >© 2019 Copyright:
+        <a href="https://mdbootstrap.com/education/bootstrap/"> Eureka</a>
+      </div>
+      <!-- Copyright -->
+    
+    </footer>
+    <!-- Footer -->
+  </div>
