--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,22 +11,23 @@
         id="login1">
     </div>
     <div class="card-body">
-      <form>
+      <div>
         <div class="form-group">
           <label for="exampleInputEmail1">Email</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" [(ngModel)]="usuario.email"
             placeholder="Email">
 
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">Senha</label>
-          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
+          <input type="password" class="form-control" id="exampleInputPassword1" [(ngModel)]="usuario.senha"
+           placeholder="Senha">
         </div>
 
-        <button type="submit" class="btn btn-outline-light" style="background-color: #7a297a;">Entrar</button>
+        <button type="submit" class="btn btn-outline-light" style="background-color: #7a297a;" (click)="login()">Entrar</button>
         <!--    <h6>Não é cadastrado? Cadastre-se aqui!</h6>
                             <button type="submit" class="btn btn-outline-light" style="background-color: #7a297a;">Cadastre-se</button>-->
-      </form>
+        </div>
     </div>
   </div>
 </div>
